# Slic3r

./: .gitignore  CMakeLists.txt  README.md  README.standalone.md  README.standalone.txt  bb.cpp  config.cmake  mk.bat  slic3r.pl  slicer.cpp  zpos.cpp
lib/Slic3r/: Fill.pm  Print.pm
lib/Slic3r/Print/: GCode.pm  Object.pm  Simple.pm
standalone/: bb.cpp  slicer.cpp  zpos.cpp
xs/: Build.PL
xs/src/: xsinit.h
xs/src/admesh/: connect.c  shared.c  stl.h  stl_io.c  util.c
xs/src/libslic3r/: ClipperUtils.cpp  ClipperUtils.hpp  GCodeWriter.cpp  LayerRegionFill.cpp  Print.cpp  Print.hpp  PrintConfig.cpp  PrintObject.cpp  TriangleMesh.cpp  TriangleMesh.hpp  libslic3r.h  utils.cpp
xs/xsp/: Clipper.xsp  Print.xsp
